--- a/BookClub/Views/Admin/AddBook.cshtml
+++ b/BookClub/Views/Admin/AddBook.cshtml
@@ -102,6 +102,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Return to the Bookshelf", "GetAllBooks", "Book")
+    </div>
