--- a/BookClub/Views/Admin/DeleteBook.cshtml
+++ b/BookClub/Views/Admin/DeleteBook.cshtml
@@ -98,7 +98,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Return to the Bookshelf", "GetAllBooks", "Book")
         </div>
     }
 </div>
