--- a/BookClub/Views/Admin/UpdateBook.cshtml
+++ b/BookClub/Views/Admin/UpdateBook.cshtml
@@ -105,5 +105,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Return to the Bookshelf", "GetAllBooks", "Book")
 </div>
