--- a/BookClub/Views/Book/GetB.cshtml
+++ b/BookClub/Views/Book/GetB.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookClub.Models.BookDiscussionModel
+﻿@model BookClub.ViewModels.JointViewModels.BookDiscussionViewModel
 
 @*<h2>View Discussions | @Model.Book.Title</h2>
 
