--- a/BookClub/Views/Post/AddPost.cshtml
+++ b/BookClub/Views/Post/AddPost.cshtml
@@ -39,6 +39,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to Posts", "GetPostsByDiscussion", new { id = Model.DiscussionId, Controller = "Discussion" })
+    </div>
