--- a/BookClub/Views/Reply/AddReply.cshtml
+++ b/BookClub/Views/Reply/AddReply.cshtml
@@ -45,5 +45,5 @@
             }
 
             <div>
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Back to Replies", "GetPost", new { id = Model.PostId, Controller = "Post" })
             </div>
