--- a/BookClub/Views/Admin/AddDiscussion.cshtml
+++ b/BookClub/Views/Admin/AddDiscussion.cshtml
@@ -63,5 +63,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Return to Discussions", "GetAllDiscussions", "Discussion")
 </div>
