--- a/BookClub/Views/Admin/DeleteDiscussion.cshtml
+++ b/BookClub/Views/Admin/DeleteDiscussion.cshtml
@@ -56,9 +56,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        @Html.ActionLink("Return to Discussions", "GetAllDiscussions", "Discussion")
+    </div>
     }
 </div>
