--- a/BookClub/Views/Challenge/_ChallengeTable.cshtml
+++ b/BookClub/Views/Challenge/_ChallengeTable.cshtml
@@ -18,7 +18,7 @@
 <table class="table table-hover" id="challengeTable">
     <tr class="challengeList">
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            Challenge
         </th>
         @*<th>
                 @Html.DisplayNameFor(model => model.Completed)
