--- a/BookClub/Views/Post/UpdatePost.cshtml
+++ b/BookClub/Views/Post/UpdatePost.cshtml
@@ -41,5 +41,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Posts", "GetPostsByDiscussion", new { id = Model.Discussion.Id, Controller = "Discussion" })
 </div>
