--- a/BookClub/Views/UserAdmin/GetAllApplicationUsers.cshtml
+++ b/BookClub/Views/UserAdmin/GetAllApplicationUsers.cshtml
@@ -26,7 +26,7 @@
                     @user.LastName
                 </td>
                 <td>
-                    @Html.ActionLink(user.UserName, "Detail", new { id = HttpContext.Current.User.Identity.GetUserId(), Controller = "Profile" })
+                    @user.UserName
                 </td>
                 <td>
                     @Html.ActionLink("Manage", "ManageUserRoles", "UserAdmin")
