--- a/BookClub/Views/Shared/_Layout.cshtml
+++ b/BookClub/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNet.Identity.Owin
+﻿
 @using Microsoft.AspNet.Identity
 
 
@@ -33,7 +33,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="font-weight: bold;">
-                    <li>@Html.ActionLink("Book Catalogue", "GetAllBooks", "Book")</li>
+                    <li>@Html.ActionLink("BookShelf", "GetAllBooks", "Book")</li>
                     <li>@Html.ActionLink("MyChallenges", "GetChallenges", "Challenge")</li>
 
                     <li class="dropdown">
