--- a/BookClub/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/BookClub/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -18,9 +18,11 @@
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
                         <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
                     }
+
                 </p>
             </div>
         }
