--- a/BookClub/Views/Home/Index.cshtml
+++ b/BookClub/Views/Home/Index.cshtml
@@ -1,66 +1,120 @@
-﻿@*<div>
-    <h5 class="homeTitle">Welcome to MyBookPal - Bringing communities together line by line</h5>
-</div>*@
-
-
-
-<div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--4-col">
-        <!-- Wide card with share menu button -->
-        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
-            <div class="mdl-card__title mdl-card--expand" id="bookShelf">
-                <h2 class="mdl-card__title-text homeLabel">BookShelf</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-                Discover the world of books at the click of a buttion
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button">
-                   @Html.ActionLink("View Our BookShelf", "GetAllBooks", "Book")
-                </a>
-            </div>
-        </div>
+﻿@using Microsoft.AspNet.Identity
+<div class="container">
+    <div class="row homeHeader">
+        <h5 class="homeTitle">Welcome to MyBookPal - The book club made for you</h5>
     </div>
 
-
-
-    <div class="mdl-cell mdl-cell--4-col">
-        <!-- Wide card with share menu button -->
-        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
-            <div class="mdl-card__title mdl-card--expand" id="community">
-                <h2 class="mdl-card__title-text homeLabel">Community</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-                Join the latest discussions about the books you love.
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button">
-                    @Html.ActionLink("Join the Conversation", "Index", "Community")
-                </a>
-            </div>
-        </div>
+    <div class="alert alert-success">
+        <strong>Sign Up Today:</strong> @Html.ActionLink("Join Our Community", "Register", "Account")
     </div>
 
-    <div class="mdl-cell mdl-cell--4-col">
-        <!-- Wide card with share menu button -->
-        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
-            <div class="mdl-card__title mdl-card--expand" id="members">
-                <h2 class="mdl-card__title-text homeLabel">Members</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-                See all our loyal book club members and become one today.
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button">
-                    View our members
-                </a>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--4-col">
+            <!-- Wide card with share menu button -->
+            <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+                <div class="mdl-card__title mdl-card--expand" id="bookShelf">
+                    <h2 class="mdl-card__title-text homeLabel">BookShelf</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Discover the world of books at the click of a buttion
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <a class="mdl-button mdl-button--colored mdl-js-button">
+                        @Html.ActionLink("View Our BookShelf", "GetAllBooks", "Book")
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
+
+
+        <div class="mdl-cell mdl-cell--4-col">
+            <!-- Wide card with share menu button -->
+            <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+                <div class="mdl-card__title mdl-card--expand" id="community">
+                    <h2 class="mdl-card__title-text homeLabel">Community</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Join the latest discussions about the books you love.
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <a class="mdl-button mdl-button--colored mdl-js-button">
+                        @Html.ActionLink("Join the Conversation", "Index", "Community")
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        @if (!User.Identity.IsAuthenticated)
+        {
+            <div class="mdl-cell mdl-cell--4-col">
+                <!-- Wide card with share menu button -->
+                <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+                    <div class="mdl-card__title mdl-card--expand" id="challenges">
+                        <h2 class="mdl-card__title-text homeLabel">Challnges</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Set yourself isolation challenges
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button">
+                            View your Challenges
+                        </a>
+                    </div>
+                </div>
+            </div>
+        }
+
+        else if (this.User.IsInRole("Member"))
+        {
+            <div class="mdl-cell mdl-cell--4-col">
+                <!-- Wide card with share menu button -->
+                <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+                    <div class="mdl-card__title mdl-card--expand" id="challenges">
+                        <h2 class="mdl-card__title-text homeLabel">Challnges</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Set yourself isolation challenges
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button">
+                            View your Challenges
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+        }
+
+        else if (this.User.IsInRole("Admin"))
+        {
+            <div class="mdl-cell mdl-cell--4-col">
+                <!-- Wide card with share menu button -->
+                <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+                    <div class="mdl-card__title mdl-card--expand" id="members">
+                        <h2 class="mdl-card__title-text homeLabel">Members</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        See all our loyal book club members and become one today.
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button">
+                            View our members
+                        </a>
+                    </div>
+                </div>
+            </div>
+        }
+
+
+
+
+
+
+    </div>
 </div>
 
 
 
-    
- 
+
