--- a/BookClub/Views/Profile/Detail.cshtml
+++ b/BookClub/Views/Profile/Detail.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container body-content">
     <div class="row sectionHeader">
-        <div class="profileSectionHeading">
+        <div class="discussionTitle">
             User Profile
         </div>
     </div>
