--- a/BookClub/Views/Home/Index.cshtml
+++ b/BookClub/Views/Home/Index.cshtml
@@ -51,14 +51,14 @@
                 <!-- Wide card with share menu button -->
                 <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
                     <div class="mdl-card__title mdl-card--expand" id="challenges">
-                        <h2 class="mdl-card__title-text homeLabel">Challnges</h2>
+                        <h2 class="mdl-card__title-text homeLabel">Challenges</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
                         Set yourself isolation challenges
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button">
-                            View your Challenges
+                            @Html.ActionLink("Set yourself a challenge", "GetChallenges", "Challenge")
                         </a>
                     </div>
                 </div>
@@ -71,14 +71,14 @@
                 <!-- Wide card with share menu button -->
                 <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
                     <div class="mdl-card__title mdl-card--expand" id="challenges">
-                        <h2 class="mdl-card__title-text homeLabel">Challnges</h2>
+                        <h2 class="mdl-card__title-text homeLabel">Challenges</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
                         Set yourself isolation challenges
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button">
-                            View your Challenges
+                            @Html.ActionLink("Set yourself a challenge", "GetChallenges", "Challenge")
                         </a>
                     </div>
                 </div>
@@ -100,7 +100,8 @@
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button">
-                            View our members
+                            @Html.ActionLink("View Our Members", "GetAllUsers", "UserAdmin")
+                            
                         </a>
                     </div>
                 </div>
