--- a/BookClub/Views/UserAdmin/EditRole.cshtml
+++ b/BookClub/Views/UserAdmin/EditRole.cshtml
@@ -1,18 +1,17 @@
 ﻿@model BookClub.ViewModels.AdminUsers.RoleViewModel
 
 
-<h2>Add New Role</h2>
+<h2>Edit Role</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     @Html.HiddenFor(model => model.RoleId)
-
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
+        
         <div class="form-group">
             @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,7 +22,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
